--- a/app/about/about.mdx
+++ b/app/about/about.mdx
@@ -1,3 +1,3 @@
 # About section works!
 
-export default ({children}) => <div className=''>{children}</div>
+export default ({children}) => <div className='pt-1'>{children}</div>
