--- a/app/support/support.mdx
+++ b/app/support/support.mdx
@@ -1,3 +1,3 @@
 # Support page works!
 
-export default ({children}) => <div className=''>{children}</div>
+export default ({children}) => <div className='pt-1'>{children}</div>
